[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator using Recursive Backtracker algorithm"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["maze", "generator", "algorithm", "graph"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]


[project.scripts]
a_maze = "a_maze_ing:main"